sys/src/bindings/i686-pc-windows-msvc.rs

#[test]
fn bindgen_test_layout_JSCFunctionType() {
    assert_eq!(
        ::std::mem::size_of::<JSCFunctionType>(),
        4usize,
        concat!("Size of: ", stringify!(JSCFunctionType))
    );
    assert_eq!(
        ::std::mem::align_of::<JSCFunctionType>(),
        4usize,
        concat!("Alignment of ", stringify!(JSCFunctionType))
    );
    fn test_field_generic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).generic) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(generic)
            )
        );
    }
    test_field_generic();
    fn test_field_generic_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).generic_magic) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(generic_magic)
            )
        );
    }
    test_field_generic_magic();
    fn test_field_constructor() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).constructor) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(constructor)
            )
        );
    }
    test_field_constructor();
    fn test_field_constructor_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).constructor_magic) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(constructor_magic)
            )
        );
    }
    test_field_constructor_magic();
    fn test_field_constructor_or_func() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).constructor_or_func) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(constructor_or_func)
            )
        );
    }
    test_field_constructor_or_func();
    fn test_field_f_f() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).f_f) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(f_f)
            )
        );
    }
    test_field_f_f();
    fn test_field_f_f_f() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).f_f_f) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(f_f_f)
            )
        );
    }
    test_field_f_f_f();
    fn test_field_getter() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).getter) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(getter)
            )
        );
    }
    test_field_getter();
    fn test_field_setter() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).setter) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(setter)
            )
        );
    }
    test_field_setter();
    fn test_field_getter_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).getter_magic) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(getter_magic)
            )
        );
    }
    test_field_getter_magic();
    fn test_field_setter_magic() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).setter_magic) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(setter_magic)
            )
        );
    }
    test_field_setter_magic();
    fn test_field_iterator_next() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<JSCFunctionType>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).iterator_next) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionType),
                "::",
                stringify!(iterator_next)
            )
        );
    }
    test_field_iterator_next();
}
extern "C" {
    pub fn JS_NewCFunction2(
        ctx: *mut JSContext,
        func: JSCFunction,
        name: *const ::std::os::raw::c_char,
        length: ::std::os::raw::c_int,
        cproto: JSCFunctionEnum,
        magic: ::std::os::raw::c_int,
    ) -> JSValue;
}
extern "C" {
    pub fn JS_NewCFunctionData(
        ctx: *mut JSContext,
        func: JSCFunctionData,
        length: ::std::os::raw::c_int,
        magic: ::std::os::raw::c_int,
        data_len: ::std::os::raw::c_int,
        data: *mut JSValue,
    ) -> JSValue;
}
extern "C" {
    pub fn JS_SetConstructor(ctx: *mut JSContext, func_obj: JSValue, proto: JSValue);
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JSCFunctionListEntry {
    pub name: *const ::std::os::raw::c_char,
    pub prop_flags: u8,
    pub def_type: u8,
    pub magic: i16,
    pub u: JSCFunctionListEntry__bindgen_ty_1,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub union JSCFunctionListEntry__bindgen_ty_1 {
    pub func: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1,
    pub getset: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2,
    pub alias: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3,
    pub prop_list: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4,
    pub str_: *const ::std::os::raw::c_char,
    pub i32_: i32,
    pub i64_: i64,
    pub f64_: f64,
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1 {
    pub length: u8,
    pub cproto: u8,
    pub cfunc: JSCFunctionType,
}
#[test]
fn bindgen_test_layout_JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1() {
    assert_eq!(
        ::std::mem::size_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1>(),
        8usize,
        concat!(
            "Size of: ",
            stringify!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1)
        )
    );
    fn test_field_length() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<
                    JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1,
                >::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).length) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1),
                "::",
                stringify!(length)
            )
        );
    }
    test_field_length();
    fn test_field_cproto() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<
                    JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1,
                >::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cproto) as usize - ptr as usize
            },
            1usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1),
                "::",
                stringify!(cproto)
            )
        );
    }
    test_field_cproto();
    fn test_field_cfunc() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<
                    JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1,
                >::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cfunc) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1),
                "::",
                stringify!(cfunc)
            )
        );
    }
    test_field_cfunc();
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2 {
    pub get: JSCFunctionType,
    pub set: JSCFunctionType,
}
